test/libsolidity/syntaxTests/parsing/location_specifiers_for_state_variables.sol
contract Foo {
	uint[] memory x;
}
// ----
// ParserError: (23-29): Expected identifier but got 'memory'
// ParserError: (30-31): Expected ';' but got identifier
// ParserError: (31-32): Expected identifier but got ';'
// ParserError: (33-34): Expected ';' but got '}'
